# django-snacks

./: README.MD  README.md  db.sqlite3  pyproject.toml
snackes/: apps.py  tests.py  urls.py  views.py
snacks_project/: settings.py  urls.py
templates/: base.html
