[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["laithfayizhussein <laithalsanory9919@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
